# MxCompiler

./: .gitignore  .gitmodules  CMakeLists.txt  build.bash  build.sh  configure  run-codegen.bash  run-llvm-ir.bash  run-riscv32m.bash
MxAntlr/: CMakeLists.txt
antlr4/: MxLexer.g4  MxParser.g4
resources/: builtin.c
resources/antlr4/: MxParser.g4
src/: MxException.h  main.cpp
src/ASM/: ASMBaseVisitor.h  Node.h  Register.h  RewriteLayer.h  Val.cpp  Val.h  print.cpp
src/AST/: AST.h  AstBaseVisitor.h  AstNode.h  Declaration.h  print.cpp
src/IR/: Builder.cpp  Builder.h  Declaration.h  IRBaseVisitor.h  Node.h  RewriteLayer.h  Type.h  Val.h  Wrapper.cpp  Wrapper.h  print.cpp
src/MxVisitor/: AstBuilder.cpp  AstBuilder.h  MxParserErrorListener.h
src/Semantic/: Builtin.cpp  ClassCollector.h  FunctionCollector.h  Scope.cpp  Scope.h  SemanticChecker.cpp  SemanticChecker.h
src/backend/: GraphColorRegAllocator.cpp  InstMaker.cpp  InstMaker.h  LiveAnalyzer.cpp  LiveAnalyzer.h  RegAllocator.cpp  RegAllocator.h  RewriteLayer.h
src/backend/regAlloc/: BaseRegAllocator.h  GraphColorRegAllocator.cpp  GraphColorRegAllocator.h  LiveAnalyzer.cpp  LiveAnalyzer.h  NaiveRegAllocator.cpp  NaiveRegAllocator.h  Rewriter.h
src/middle/: IRBuilder.cpp  IRBuilder.h  Mem2Reg.cpp  Mem2Reg.h  UnusedFunctionRemover.h
src/middle/ConstFold/: ConstFold.cpp
src/middle/Mem2Reg/: Mem2Reg.cpp
src/opt/IR/ConstFold/: ConstFold.cpp  ConstFold.h
src/opt/IR/Mem2Reg/: Mem2Reg.cpp
src/utils/: Graph.h  debug.h
